# captcha_bot

./: .gitignore  alembic.ini  app.py  bot.service  bot.service.example  db.sqlite  emojis.py  keyboard.py  keyboards.py  messages.json  messages.py  pyproject.toml  start.sh  states.py
alembic/: env.py
alembic/versions/: 281936b43180_.py  e4b567aaa034_init.py
config/: .env.example  settings.py
database/: database.py
database/models/: __init__.py  messages.py  meta.py  users.py
handlers/: __init__.py  command_start.py  router.py
handlers/chat_join_request/: __init__.py  captcha_approve.py  on_join.py
handlers/settings/: __init__.py  admins.py  router.py  settings.py
handlers/settings/messages/: __init__.py  captcha_button.py  captcha_message.py  hello_message.py  messages.py  timeout_message.py  welcome_message.py
middlewares/: scheduler_middleware.py
