[tool.poetry]
name = "captcha-bot"
version = "0.1.0"
description = ""
authors = ["rTiRe <zientenin@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
pydantic-settings = "^2.5.2"
aiosqlite = "^0.20.0"
alembic = "^1.13.3"
emoji = "^2.14.0"
redis = "^5.1.1"
isort = "^5.13.2"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
